arreglado footer, trust y steps para mobile

--- a/src/app/shared/components/trust-quadri/trust-quadri.component.html
+++ b/src/app/shared/components/trust-quadri/trust-quadri.component.html
@@ -4,39 +4,39 @@
       ¿ Por qué terrazzo ?  ¿ Por qué Quadri ?
     </div> -->
     <div class="row">
-      <div class=" p-5 col d-flex flex-column align-items-center">
+      <div class=" items col-md-3 col-sm-12 d-flex flex-column align-items-center">
         <div>
           <fa-icon class="icons p-3" [icon]="lightbulb"></fa-icon>
         </div>
         <div class="align-self-center px-2 sub-title text-center">Singular</div>
-        <div class="py-5 text-center text">
+        <div class="text-center text">
           Dale a tus proyectos personalidad y originalidad. Usando Terrazzo podras alcanzar el nivel de customizacion justo para materializar tu vision.
         </div>
       </div>
-      <div class="p-5 col d-flex flex-column align-items-center">
+      <div class="items col-md-3 col-sm-12 d-flex flex-column align-items-center">
         <div>
           <fa-icon class="icons p-3" [icon]="link"></fa-icon>
         </div>
         <div class="align-self-center px-2 sub-title text-center">A prueba del tiempo</div>
-        <div class="py-5 text-center text">
+        <div class="text-center text">
           Terrazzo es un material sumamente noble, diseñado para resistir el paso del tiempo.
         </div>
       </div>
-      <div class="p-5 col d-flex flex-column align-items-center">
+      <div class="items col-md-3 col-sm-12 d-flex flex-column align-items-center">
         <div>
           <fa-icon class="icons p-3" [icon]="check"></fa-icon>
         </div>
         <div class="align-self-center px-2 sub-title text-center">Calidad</div>
-        <div class="py-5 text-center text" >
+        <div class="text-center text" >
           Con fanatica dedicación fabricamos todos nuestos productos. Nada es tercerizado. Materias primas supervisadas y nuestros procesos perfeccionados al minimo detalle.
         </div>
       </div>
-      <div class="p-5 col d-flex flex-column align-items-center">
+      <div class="items col-md-3 col-sm-12 d-flex flex-column align-items-center">
         <div>
           <fa-icon class="icons p-3" [icon]="hands"></fa-icon>
         </div>
         <div class="align-self-center px-2 sub-title text-center">Experiencia</div>
-        <div class="py-5 text-center text" >
+        <div class="text-center text" >
           Desde 1861. Quizas no lo sepas, pero seguro te topaste con alguno de nuestros proyectos. Podes confiar en nosotros, estamos hace mucho y planeamos seguir mucho más!
         </div>
       </div>
