--- a/src/app/shared/components/steps/steps.component.html
+++ b/src/app/shared/components/steps/steps.component.html
@@ -4,21 +4,21 @@
       ¿Donde empezar?
     </div>
     <div class="row">
-      <div class=" p-5 col d-flex flex-column align-items-center">
+      <div class=" item-wrapper col-md-4 col-sm-12 d-flex flex-column align-items-center">
         <div class="align-self-center px-3 rounded-circle number text-center">1</div>
-        <div class="py-5 text-center text">
+        <div class="text-center text">
           Encuentra el producto adecuado para tu proyecto usando la guia de aplicaciones
         </div>
       </div>
-      <div class="p-5 col d-flex flex-column align-items-center">
+      <div class="item-wrapper col-md-4 col-sm-12 d-flex flex-column align-items-center">
         <div class="align-self-center px-3 rounded-circle number text-center" >2</div>
-        <div class="py-5 text-center text">
+        <div class="text-center text">
           Contactanos y cuentanos los detalles de tu proyecto para que podamos ayudarte
         </div>
       </div>
-      <div class="p-5 col d-flex flex-column align-items-center">
+      <div class="item-wrapper col-md-4 col-sm-12 d-flex flex-column align-items-center">
         <div class="align-self-center px-3 rounded-circle number text-center">3</div>
-        <div class="py-5 text-center text" >
+        <div class="text-center text" >
           Juntos lograremos crear un espacio sofisticado, elefante y especial
         </div>
       </div>
