--- a/src/app/shared/components/steps/steps.component.scss
+++ b/src/app/shared/components/steps/steps.component.scss
@@ -1,3 +1,7 @@
+.item-wrapper{
+  padding: 3rem;
+}
+
 .number {
   background-color: var(--green-dark);
   color: white;
@@ -7,9 +11,29 @@
 .text {
   font-size: 1.2rem;
   font-weight: 100;
+  padding-top: 3rem;
+  padding-bottom:3rem;
 }
 
 .title {
   font-size: 2rem;
   font-weight: 100;
+}
+
+@media (max-width : 415px) {
+
+  .item-wrapper{
+    padding-top: 1rem;
+    padding-bottom:1rem;
+  }
+
+  .title {
+    padding-bottom: 1rem; 
+  }
+
+  .text {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
 }
