--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -1,9 +1,9 @@
-<div class="jumbotron jumbotron-fluid m-0 foot">
+<div class="footer-wrapper jumbotron jumbotron-fluid m-0 foot">
   <div class="container">
 
     <div class="row p-4">
       <div class="col-md-4 d-flex flex-column mb-2">
-        <div class="text-center pb-4 title">CONTACTO</div>
+        <div class="text-center title">CONTACTO</div>
         <div class="text-center">
           <div>
             <fa-icon [icon]="telephone"></fa-icon>&nbsp; +54 11 4861 0450
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col-md-4 mb-2">
-        <div class="pb-4 text-center title">LINKS</div>
+        <div class="text-center title">LINKS</div>
         <div class="text-center">
           <div><a class="links" [routerLink]="['/aplicaciones']">Aplicaciones</a></div>
           <div><a class="links" [routerLink]="['/productos']">Productos</a></div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="col-md-4 d-flex flex-column social text-center mb-2 mobileWidth">
-        <div class="pb-4 text-center title">SEGUINOS</div>
+        <div class="text-center title">SEGUINOS</div>
         <div class="d-flex justify-content-center">
           <a class="links" href="https://www.facebook.com/quadrisa/">
             <fa-icon class="networks p-3" [icon]="facebook"></fa-icon>
