--- a/src/app/shared/ui/footer/footer.component.scss
+++ b/src/app/shared/ui/footer/footer.component.scss
@@ -13,6 +13,7 @@
 .title {
 	font-size: 1rem;
 	font-weight: 100;
+	padding-bottom: 1.5rem;
 }
 
 .links {
@@ -30,9 +31,18 @@
 
 @media (max-width : 415px) {
 
+	.footer-wrapper {
+		padding-top: 0px;
+	}
+
 	.mobileWidth {
 		width: 100% !important;
 		max-width: 100%;
+	}
+
+	.title {
+		padding-bottom: 0.5rem;
+    padding-top: 1rem;
 	}
 
 }
