arreglos para movil

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -48,6 +48,16 @@
   text-align: start;
 }
 
+// .carousel-caption {
+//   right: 0;
+//   bottom: 0;
+//   left: 0;
+//   top: 0;
+//   height: 100%;
+//   width: 100%;
+//   // text-align: start;
+// }
+
 .oneliner {
 	color: white;
 	width: 100%;
