--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -14,6 +14,13 @@ Como el template de cada slide se crea dinamicamente por el componente de ng-boo
           <button type="button" class="ml-2 btn btn-lg btn-outline-secondary botonConocer" (click)= "more()">Conocer mas</button>
         </div>
       </div>
+      <!-- <div class="jumbotron bg-transparent">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <button type="button" class="ml-2 btn btn-lg btn-outline-secondary botonConocer" (click)= "more()">Conocer mas</button>
+      </div> -->
       <img style="display:none;" [src]="images[data.carrImgs[1]]" width="100" alt="">
       <div class="custom" [ngStyle]="{'background-image': 'url(' + images[data.carrImgs[0]].url + ')'}"></div>
     </ng-template>
