--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -23,7 +23,7 @@
           <div><a class="links" [routerLink]="['/productos']">Productos</a></div>
           <div><a class="links" [routerLink]="['/inspiracion']">Inspiracion</a></div>
           <div><a class="links" [routerLink]="['/nosotros']">Nosotros</a></div>
-          <div><a class="links" [routerLink]="['/contact']">Contacto</a></div>
+          <div><a class="links" [routerLink]="['/contacto']">Contacto</a></div>
         </div>
       </div>
       <div class="col-md-4 d-flex flex-column social text-center mb-2 mobileWidth">
