--- a/src/app/products/prod-menu/prod-menu.component.html
+++ b/src/app/products/prod-menu/prod-menu.component.html
@@ -11,7 +11,8 @@
   <div class="container">
     <div class="d-flex product-container flex-wrap">
       <div *ngFor="let prod of productsArray" class="prod m-3" (click)="routeTo(prod)">
-        <div class="background"></div>
+        <div class="background" 
+        [ngStyle]="{'background-image': 'url(' + products[prod].menu + ')'}"></div>
         <div class="text-wrapper d-flex align-items-center">
           <div class="text-center w-100 prod-name"> {{ products[prod].name }} </div>
         </div>
