--- a/src/app/app-center/application/application.component.html
+++ b/src/app/app-center/application/application.component.html
@@ -1,14 +1,3 @@
-<!-- <div class="jumbotron jumbotron-fluid imagen-presentacion mb-0"
-[ngStyle]="{'background-image': 'url(' + application.presentacion + ')'}">
-</div>
-
-<div class="jumbotron jumbotron-fluid mb-0">
-  <div class="container">
-    <div class="titulo">{{ application.titulo }}</div>
-    <p class="lead">{{ application.texto }}</p>
-  </div>
-</div> -->
-
 <div class="app-header-wrapper">
   <div class="jumbotron jumbotron-fluid imagen-presentacion mb-0"
     [ngStyle]="{'background-image': 'url(' + application.presentacion + ')'}"></div>
@@ -20,8 +9,7 @@
   </div>
 </div>
 
-<div class="jumbotron jumbotron-fluid mb-0 bg-white
-">
+<!-- <div class="jumbotron jumbotron-fluid mb-0 bg-white">
   <div class="container" >
     <div class="titulo mb-3">Conoce todos nuestras lineas de productos para {{ application.titulo | lowercase }} </div>
     <div class="d-flex product-container flex-wrap">
@@ -30,7 +18,22 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+<div class="jumbotron jumbotron-fluid mb-0 bg-white">
+    <div class="container" >
+      <div class="titulo mb-3">Conoce todos nuestras lineas de productos para {{ application.titulo | lowercase }} </div>
+      <div class="d-flex product-container flex-wrap">
+        <div *ngFor="let prod of application.products" class="prod m-3" (click)="routeTo(prod)">
+          <div class="background" 
+          [ngStyle]="{'background-image': 'url(' + products[prod].menu + ')'}"></div>
+          <div class="text-wrapper d-flex align-items-center">
+            <div class="text-center w-100 prod-name"> {{ products[prod].name }} </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <div class="jumbotron jumbotron-fluid imagen-segunda mb-0"
 [ngStyle]="{'background-image': 'url(' + application.presentacion + ')'}">
