--- a/src/app/products/prod-menu/prod-menu.component.html
+++ b/src/app/products/prod-menu/prod-menu.component.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="jumbotron jumbotron-fluid mb-0 bg-white">
+<div class="jumbotron jumbotron-fluid mb-0 bg-transparent">
   <div class="container">
     <div class="d-flex product-container flex-wrap">
       <div *ngFor="let prod of productsArray" class="prod m-3" (click)="routeTo(prod)">
