--- a/src/app/shared/components/steps/steps.component.html
+++ b/src/app/shared/components/steps/steps.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid m-0">
+<div class="jumbotron jumbotron-fluid m-0 bg-transparent">
   <div class="container">
     <div class="text-center title">
       ¿Donde empezar?
