--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 
+<img alt="" *ngFor="let img of imgArray" style="display:none;" [src]="images[img].url">
+
 
