--- a/src/app/app-center/application/application.component.html
+++ b/src/app/app-center/application/application.component.html
@@ -12,8 +12,8 @@
 <div class="jumbotron jumbotron-fluid mb-0 bg-white">
     <div class="container" >
       <div class="titulo mb-3">Conoce todos nuestras lineas de productos para {{ application.titulo | lowercase }} </div>
-      <div class="d-flex product-container flex-wrap">
-        <div *ngFor="let prod of application.products" class="prod m-3" (click)="routeTo(prod)">
+      <div class="d-flex product-container">
+        <div *ngFor="let prod of application.products" class="prod" (click)="routeTo(prod)">
           <div class="background" 
           [ngStyle]="{'background-image': 'url(' + products[prod].menu + ')'}"></div>
           <div class="text-wrapper d-flex align-items-center">
