--- a/src/app/products/prod-menu/prod-menu.component.html
+++ b/src/app/products/prod-menu/prod-menu.component.html
@@ -9,8 +9,8 @@
 
 <div class="jumbotron jumbotron-fluid mb-0 bg-transparent">
   <div class="container">
-    <div class="d-flex product-container flex-wrap">
-      <div *ngFor="let prod of productsArray" class="prod m-3" (click)="routeTo(prod)">
+    <div class="d-flex product-container">
+      <div *ngFor="let prod of productsArray" class="prod" (click)="routeTo(prod)">
         <div class="background" 
         [ngStyle]="{'background-image': 'url(' + products[prod].menu + ')'}"></div>
         <div class="text-wrapper d-flex align-items-center">
