modificados los tamaños de los subtitulos

--- a/src/app/app-center/application/application.component.scss
+++ b/src/app/app-center/application/application.component.scss
@@ -32,7 +32,7 @@
 }
 
 .sub-title {
-  font-size: 2rem;
+  font-size: 3.5vh;
   font-weight: 100;
 }
 
@@ -46,7 +46,7 @@
 
 .titulo {
   font-size: 2.5rem;
-  font-weight: 130;
+  font-weight: 100;
 }
 
 .product-container{
@@ -80,7 +80,7 @@
   top: 0;
   left: 0;
   font-size: 1.8rem;
-  font-weight: 130;
+  // font-weight: 130;
   color: white;
   height: 100%;
   width: 100%;
