--- a/src/app/products/prod-menu/prod-menu.component.scss
+++ b/src/app/products/prod-menu/prod-menu.component.scss
@@ -24,7 +24,7 @@
 
 .title {
   font-size: 2.5rem;
-  font-weight: 130;
+  font-weight: 100;
   color: white;
 }
 
@@ -60,7 +60,7 @@
   left: 0;
   height: 100%;
   font-size: 1.8rem;
-  font-weight: 130;
+  // font-weight: 100;
   color: white;
   height: 100%;
   width: 100%;
