--- a/src/app/products/product/product.component.scss
+++ b/src/app/products/product/product.component.scss
@@ -29,7 +29,7 @@
 }
 
 .sub-title {
-  font-size: 2rem;
+  font-size: 3.5vh;
   font-weight: 100;
 }
 
@@ -57,7 +57,7 @@
   left: 0;
   height: 100%;
   font-size: 1.8rem;
-  font-weight: 130;
+  // font-weight: 100;
   color: white;
   height: 100%;
   width: 100%;
