--- a/src/app/shared/ui/header/header.component.scss
+++ b/src/app/shared/ui/header/header.component.scss
@@ -1,3 +1,4 @@
+
 .landing {
 	background-color: var(--black);
 }
@@ -11,7 +12,7 @@
 }
 
 nav {
-	min-height: var(--navbar-height);
+	// min-height: var(--navbar-height);
 }
 
 .nav-item {
