--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -18,6 +18,8 @@ $green-light: rgb(110, 187, 191);
   --green-dark:  rgb(0,150, 145);
   --green-light: rgb(110, 187, 191);
   --light:       rgb(86.7%, 86.7%, 86.7%);
+  --pink-light:  rgb(255, 42, 212);
+  --pink-dark:   rgb(255,42,255);
 
   // medidas
   --navbar-height: 96.84px;
