--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,29 +1,25 @@
-<!-- <nav class="navbar navbar-expand-lg sticky-top navbar-dark" [ngClass]="{'landing': router.url === '/', 'notLanding': !(router.url === '/'),'expandedMobile':isExpanded}"> -->
-<nav class="navbar navbar-expand-lg sticky-top navbar-dark landing">
-  <!-- <div class="container"> -->
+<nav class="navbar navbar-expand-lg fixed-top bg-transparent" [ngClass]="{'navbar-dark': router.url === '/', 'navbar-light': !(router.url === '/'),'expandedMobile':isExpanded}"
+[@in]="scrollDir">
+<!-- [hidden] = "scrollDir === 'down'" > -->
 
-    <a class="navbar-brand" [routerLink]="['/']">
-      <img [src]="logo" width="100" alt="">
-    </a>
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" 
-    aria-controls="navbarNav" [attr.aria-expanded]="!isExpanded" aria-label="Toggle navigation" (click)="isExpanded = !isExpanded">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav" [ngbCollapse]="!isExpanded">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
-          <a class="nav-link" [routerLink]="['/aplicaciones']">Aplicaciones</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
-          <a class="nav-link" [routerLink]="['/productos']">Productos</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
-          <a class="nav-link" [routerLink]="['/inspiracion']">Inspiracion</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
-          <a class="nav-link" [routerLink]="['/contacto']">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  <!-- </div> -->
+  <a class="navbar-brand" [routerLink]="['/']">
+    <img [src]="logo" width="100" alt="">
+  </a>
+  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" 
+  aria-controls="navbarNav" [attr.aria-expanded]="!isExpanded" aria-label="Toggle navigation" (click)="isExpanded = !isExpanded">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav" [ngbCollapse]="!isExpanded">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/productos']">Productos</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/inspiracion']">Inspiracion</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/contacto']">Contacto</a>
+      </li>
+    </ul>
+  </div>
 </nav>
