--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -9,7 +9,7 @@
             <fa-icon [icon]="telephone"></fa-icon>&nbsp; +54 11 4861 0450
           </div>
           <div>
-            <fa-icon [icon]="envelope"></fa-icon>&nbsp; <a style="color: #ddd;" [href]="'mailto:info@quadri.com.ar'">info@quadri.com.ar</a>
+            <fa-icon [icon]="envelope"></fa-icon>&nbsp; <a style="color: #ddd;" [href]="'mailto:info@quadri.com.ar'">info@queo.com.ar</a>
           </div>
             <div class="d-inline-block pl-1">
               <fa-icon [icon]="map"></fa-icon>&nbsp; Gascon 483 <br> Ciudad Autonoma de Buenos Aires <br> CP C1181ACG, Argentina
@@ -19,7 +19,6 @@
       <div class="col-md-4 mb-2">
         <div class="text-center title">LINKS</div>
         <div class="text-center">
-          <div><a class="links" [routerLink]="['/aplicaciones']">Aplicaciones</a></div>
           <div><a class="links" [routerLink]="['/productos']">Productos</a></div>
           <div><a class="links" [routerLink]="['/inspiracion']">Inspiracion</a></div>
           <div><a class="links" [routerLink]="['/nosotros']">Nosotros</a></div>
@@ -29,7 +28,7 @@
       <div class="col-md-4 d-flex flex-column social text-center mb-2 mobileWidth">
         <div class="text-center title">SEGUINOS</div>
         <div class="d-flex justify-content-center">
-          <a class="links" href="https://www.facebook.com/quadrisa/">
+          <a class="links" href="https://www.facebook.com/queobsas/">
             <fa-icon class="networks p-3" [icon]="facebook"></fa-icon>
           </a>
           <a class="links" href="https://www.instagram.com/queobsas/">
@@ -42,5 +41,5 @@
   </div>
 </div>
 <div class="d-flex copy">
-  <div class="px-2 ml-auto nota">Copyright © 2018 Quadri - web design by Maurito</div>
+  <div class="px-2 ml-auto nota">Copyright © 2018 Queo - web design by Maurito</div>
 </div>
