--- a/src/app/products/prod-menu/prod-menu.component.html
+++ b/src/app/products/prod-menu/prod-menu.component.html
@@ -1,22 +1,37 @@
-<div class="prod-header-wrapper">
-  <div class="imagen-presentacion" [ngStyle]="{'background-image': 'url(' + featured + ')'}"></div>
-  <div class="title-wrapper jumbotron mb-0 bg-transparent">
-    <div class="container">
-      <div class="title">Conoce todos nuestras lineas de productos</div>
+
+<div class="title-wrapper jumbotron mb-0 bg-transparent">
+  <div class="container">
+    <!-- <div class="title">Nuestros productos</div> -->
+    <p class="sub-title">Diseñados para sorprender. Fabricados con maxima dedicacion. Llevamos el estudio de los materiales a su mayor exponente. Chamullo del estilo apple</p>
+    <div class="collection-menu d-flex">
+      <div class="col-title" *ngFor="let col of collections | sort:'order':true:false"
+      (click)="scrollCol(col.colName)" >
+        {{ col.colName }}
+      </div>
     </div>
   </div>
 </div>
 
-<div class="jumbotron jumbotron-fluid mb-0 bg-transparent">
+<div class="jumbotron jumbotron-fluid mb-0 pt-3 bg-light">
   <div class="container">
-    <div class="d-flex product-container">
-      <div *ngFor="let prod of productsArray" class="prod" (click)="routeTo(prod)">
-        <div class="background" 
-        [ngStyle]="{'background-image': 'url(' + products[prod].menu + ')'}"></div>
-        <div class="text-wrapper d-flex align-items-center">
-          <div class="text-center w-100 prod-name"> {{ products[prod].name }} </div>
+    <div class="collection-menu">
+      <div class="col-title2" *ngFor="let col of collections | sort:'order':true:false">
+        <div [id]="col.colName" class="col-title-line d-flex align-items-center">
+          <span class="pr-3"> {{ col.colName }} </span> <hr class="my-4 w-100">
         </div>
+
+        <div class="d-flex product-container">
+          <div *ngFor="let prod of col.products | sort:'order':true:false" class="prod" (click)="routeTo(prod)">
+            <div class="background" 
+            [ngStyle]="{'background-image': 'url(' + prod.bgImg + ')'}"></div>
+            <div class="text-wrapper d-flex align-items-end">
+              <div class="text-center w-100 prod-name"> {{ prod.name }} </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
+    
   </div>
 </div>
